# shirazlug.github.io

./: .directory  .gitignore  .gitlab-ci.yml  .gitmodules  Makefile  Makefile.in  README.md  _config.yml  config.toml  config.toml.old  config.yaml  configure  configure.ac
.github/workflows/: hugo.yml
content/: _index.md  irc.md  links.md  tags.md  team.md
content/about/: _index.md  about_shirazlug.md  beneficial_links.md  coordinators.md  creed.md  statute.md
content/event/: Voip.md  birthday.md  event0_voip.md  event1_3rd_birthday.md  event1_birthday.md  event2_nowruz.md  event3_archlinux.md  event4_joomla.md  event5_ubuntu_python_workshop.md  event6_4th_birthday.md  norouz.md  nowruz.md  voip.md
content/events/: _index.md  event0_free_software_conf_1.md  event0_voip.md  event1_3rd_birthday.md  event2_nowruz.md  event3_archlinux.md  event4_joomla.md  event5_ubuntu_python_workshop.md  event6_4th_birthday.md  event7_wordpress.md  event8_free_software_con.md  event8_free_software_conf_2.md  event9_arak_conf.md
content/members/: _index.md  barzegar.md  behzadi.md  beyzavi.md  bostandoust.md  firouzi.md  jafari.md  khozaei.md  mirshaei.md  mohajer.md  molaei.md  nezam.md  nikkhah.md  razmjoo.md  saleh.md  shaygani.md  ssbostan.md
content/news/: _index.md  orangepi_appropriation_rasbrizero.md
content/post/: quickـstart_hugo.md
content/posts/: _index.md  introduction_hugo.md  introduction_rustdesk_remote_desktop.md  newest.md  quickـstart_hugo.md  session0.md  session10.md  session11.md  session12.md  session15.md  session16.md  session17.md  session18.md  session19.md  session2.md  session20.md  session21.md  session22.md  session23.md  session24.md  session25.md  session26.md  session27.md  session28.md  session29.md  session30.md  session33.md  session34.md  session35.md  (+32 more)
layouts/: index.html  robots.txt  sitemap.xml
(+386 files in other folders)
